--- a/werim_project/src/main/resources/application.properties
+++ b/werim_project/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port= 7080
 
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=oraclejava
+spring.datasource.username=navy
+spring.datasource.password=123123
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
